Small tweaks to get nuScenes running

--- a/.gitignore
+++ b/.gitignore
@@ -137,5 +137,9 @@ data/sunrgbd/OFFICIAL_SUNRGBD/
 *.obj
 *.ply
 
+# Something random by Elias
+lib64
+pyvenv.cfg
+
 # Waymo evaluation
 mmdet3d/core/evaluation/waymo_utils/compute_detection_metrics_main
