--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-ARG PYTORCH="1.6.0"
-ARG CUDA="10.1"
+ARG PYTORCH="1.9.0"
+ARG CUDA="10.2"
 ARG CUDNN="7"
 
 FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-devel
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y ffmpeg libsm6 libxext6 git ninja-build 
     && rm -rf /var/lib/apt/lists/*
 
 # Install MMCV, MMDetection and MMSegmentation
-RUN pip install mmcv-full==1.3.8 -f https://download.openmmlab.com/mmcv/dist/cu101/torch1.6.0/index.html
+RUN pip install mmcv-full==1.3.8 -f https://download.openmmlab.com/mmcv/dist/cu102/torch1.9.0/index.html
 RUN pip install mmdet==2.14.0
 RUN pip install mmsegmentation==0.14.1
 
@@ -25,6 +25,18 @@ ENV FORCE_CUDA="1"
 RUN pip install -r requirements/build.txt
 RUN pip install --no-cache-dir -e .
 
+# Install MMDetection3D
+RUN conda clean --all
+RUN git clone https://github.com/Jaxang/SST.git /sst
+WORKDIR /sst
+ENV FORCE_CUDA="1"
+RUN pip install -r requirements/build.txt
+RUN pip install --no-cache-dir -e .
+
+RUN pip install ipdb
+RUN pip install numba==0.48
+
 # uninstall pycocotools installed by nuscenes-devkit and reinstall mmpycocotools
+RUN conda install cython
 RUN pip uninstall pycocotools --no-cache-dir -y
 RUN pip install mmpycocotools --no-cache-dir --force --no-deps
