Fixed analysing tools for plotting our results

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ data/sunrgbd/OFFICIAL_SUNRGBD/
 # Something random by Elias
 lib64
 pyvenv.cfg
+run_local.sh
 
 # Waymo evaluation
 mmdet3d/core/evaluation/waymo_utils/compute_detection_metrics_main
